# agent-wallet

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  install.sh  setup.sh
.github/workflows/: ci.yml  release.yml
crates/saw-cli/: Cargo.toml
crates/saw-cli/src/: lib.rs  main.rs
crates/saw-cli/tests/: cli_gen_key.rs  cli_install.rs  cli_policy.rs  gen_key_evm.rs  gen_key_output.rs  gen_key_sol.rs  permissions.rs  policy_update.rs  wallet_validation.rs
crates/saw-daemon/: Cargo.toml
crates/saw-daemon/src/: lib.rs  main.rs
crates/saw-daemon/tests/: audit_log.rs  audit_log_safety.rs  cli_daemon.rs  request_limits.rs  shutdown.rs  sign_eip2612_permit.rs  sign_evm_tx.rs  sign_sol_tx.rs  socket.rs  socket_perms.rs  socket_read_timeout.rs  wallet_validation.rs
docs/: api.md  contributing.md  docker.md  policy.md  prd-eip2612-permit-signing.md  production.md  security.md
systemd/: saw.service
tests/: install-sh-unit.sh
