[package]
name = "saw-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
ethereum-types = "0.14"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
rlp = "0.5"
secp256k1 = { version = "0.29", features = ["rand", "recovery"] }
signal-hook = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha3 = "0.10"

[dev-dependencies]
saw = { path = "../saw-cli" }

[[bin]]
name = "saw-daemon"
path = "src/main.rs"
